# digital-twins

./: .gitignore  README.md  pyproject.toml
data/: traffic_ground_truth.csv  true_system_case_1.json  wildfire_sensor_readings.csv
notebooks/: 01_Continuous_Lorenz_Attractor.ipynb  02_Discrete_Time_Cellular_Automata.ipynb  03_DEVS_Traffic_Light.ipynb  04_The_Kalman_Gain_Interactive.ipynb  05_1D_Agent_Kalman_Filter.ipynb  06_Bootstrap_Particle_Filter_Basics.ipynb  07_Visualizing_Particle_Degeneracy.ipynb  08_Joint_State_Parameter_Estimation.ipynb  09_Identical_Twin_Experiment_Traffic.ipynb  10_Wildfire_Spatial_Partition_PF.ipynb  11_Supply_Chain_Digital_Twin.ipynb
scripts/: generate_traffic_data.py  generate_wildfire_data.py
src/assimilation/: particle.py
src/digital_twins/: __init__.py
src/digital_twins/assimilation/: __init__.py  kalman.py  particle.py
src/digital_twins/models/: __init__.py  continuous.py  devs.py  discrete_time.py
src/digital_twins/visualization/: __init__.py  spatial_plots.py  uncertainty_plots.py
src/models/: continuous.py
tests/: __init__.py  test_continuous.py  test_kalman.py  test_particle.py
