[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-twins-ddds"
version = "0.1.0"
description = "Digital Twins: Data-Driven Dynamic Simulation - Companion package for building digital twins with data assimilation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bulent Soykan", email = "soykanb@gmail.com"}
]
maintainers = [
    {name = "Bulent Soykan", email = "soykanb@gmail.com"}
]
keywords = [
    "digital-twins",
    "data-assimilation", 
    "kalman-filter",
    "particle-filter",
    "simulation",
    "dynamic-systems",
    "state-estimation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "ipywidgets>=7.6.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "build>=0.7.0",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/bulentsoykan/digital-twins"
Documentation = "https://github.com/bulentsoykan/digital-twins"
Repository = "https://github.com/bulentsoykan/digital-twins.git"
Changelog = "https://github.com/bulentsoykan/digital-twins/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/bulentsoykan/digital-twins/issues"
Author = "https://bulentsoykan.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true